# theiavalidate

./: .gitignore  Dockerfile  README.md  __init__.py  filtered_example-table1.tsv  pyproject.toml  requirements.txt  theiavalidate_summary.html
examples/: example-column_translation.tsv  example-columns_to_compare.tsv  example-table1.tsv  example-table2.tsv  example-validation_criteria.tsv  example_command.sh
examples/example-outputs/: example_exact_differences.tsv  example_summary.html  example_validation_criteria_differences.tsv  filtered_example-table1.tsv  filtered_example-table2.tsv  theiavalidate_exact_differences.tsv  theiavalidate_filtered_example-table1.tsv  theiavalidate_filtered_example-table2.tsv  theiavalidate_summary.html  theiavalidate_validation_criteria_differences.tsv
examples/file_comparison/: example-validation_criteria_exact_sort_file.tsv  file_comparison_column_translation.tsv  file_comparison_columns_to_compare.txt  file_comparison_table1.tsv  file_comparison_table2.tsv
examples/file_comparison/outputs/: file_comparison_exact_differences.tsv  file_comparison_validation_criteria_differences (2).tsv  (+2 more)
file_diffs/: 0_col1_diff.txt  0_col2_diff.txt  1_col2_diff.txt  sample1_col2_diff.txt  sample2_col1_diff.txt  sample3_col1_diff.txt
tests/: __init__.py  test_validator.py
tests/table1_files/: match1-2.txt  match1-3.txt  match2-2.txt  match2-3.txt  mismatch1-3.txt  mismatch2-2.txt
tests/table2_files/: mismatch1-3.txt  mismatch2-2.txt
theiavalidate/: CheckInputs.py  Validator.py  __init__.py  theiavalidate.py
(+3 files in other folders)
