[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "theiavalidate"
version = "1.1.3"
authors = [{name="Sage Wright", email="sage.wright@theiagen.com"}]
description = "A Python tool to compare the contents of two tab-delimited files."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = '>=3.0,<4'
dependencies = ['pandas>=1.4.2', 
                'numpy>=1.22.4', 
                'pretty-html-table>=0.9.16', 
                'pdfkit>=1.0.0']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/theiagen/theiavalidate"
"Bug Tracker" = "https://github.com/theiagen/theiavalidate/issues"

[project.scripts]
theiavalidate = "theiavalidate.theiavalidate:main"

[tool.setuptools.packages.find]
include = ["theiavalidate*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["dist*", "test*"]  # exclude packages matching these glob patterns (empty by default)
